# ADLX-Fan-Tuning-Factory-Reset

./: CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
